# ai-chat-game-vertex

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
.claire/worktrees/async-exploring-feather/frontend/app/: page.tsx
.kiro/specs/agent-engine-chat-app/: design.md  requirements.md  research.md  tasks.md
backend/app/: main.py
backend/app/api/: conversation.py
backend/app/core/: config.py  logging.py
backend/app/models/: conversation.py  image.py
backend/app/services/: agent.py  agent_tools.py  conversation.py  image.py
backend/tests/: conftest.py  test_agent_tools.py  test_agent_tools_integration.py  test_chat_agent_integration.py  test_config.py  test_deploy_agent.py  test_logging.py  test_main.py  test_models_conversation.py  test_models_image.py  test_router_conversation.py  test_service_agent.py  test_service_conversation.py  test_service_image.py  test_service_image_generate.py
data/characters/: character.json
frontend/: package.json  pnpm-lock.yaml
frontend/__tests__/components/: CharacterImageDisplay.test.tsx  ConversationLog.test.tsx  MessageInput.test.tsx
frontend/__tests__/contexts/: ChatContext.test.tsx  chatReducer.test.ts
frontend/__tests__/types/: types.test.ts
frontend/components/: CharacterImageDisplay.tsx  ChatPage.tsx  ConversationLog.tsx  MessageInput.tsx
frontend/contexts/: ChatContext.tsx
frontend/lib/: api.ts
frontend/types/: index.ts
scripts/: deploy_agent.py
