[project]
name = "ai-chat-game-vertex"
version = "0.1.0"
description = "AI Chat Game with Vertex AI Agent Engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "google-cloud-aiplatform[agent_engines,adk]>=1.138",
    "google-cloud-firestore>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "anyio>=4.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.25",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
asyncio_mode = "auto"
